[package]
name = "jsonwebtokens"
version = "1.0.0-alpha.9"
authors = ["Robert Bragg <robert@sixbynine.org>"]
license = "MIT"
description = "A Json Web Token implementation for Rust"
homepage = "https://github.com/rib/jsonwebtokens"
repository = "https://github.com/rib/jsonwebtokens"
documentation = "https://docs.rs/jsonwebtokens"
readme = "README.md"
keywords = ["jwt", "json", "web", "token", "api"]
edition = "2018"

[features]
matching = [ "regex" ]

[dependencies]
base64 = "0.11"
serde = { version="1", features=["derive"] }
serde_json = "1"
regex = { version = "1", optional = true }
pem = "0.7"
simple_asn1 = "0.4"
ring = { version = "0.16", features = ["std"] }

[dev-dependencies]
tokio-test = "0.2"