[package]
name = "jsonwebtokens"
version = "1.1.0"
authors = ["Robert Bragg <robert@sixbynine.org>"]
license = "MIT"
description = "A Json Web Token implementation for Rust"
homepage = "https://github.com/rib/jsonwebtokens"
repository = "https://github.com/rib/jsonwebtokens"
documentation = "https://docs.rs/jsonwebtokens"
readme = "README.md"
keywords = ["jwt", "json", "web", "token", "api"]
edition = "2018"

[features]
default = [ "matching" ]
matching = [ "regex" ]

[dependencies]
base64 = "0.21.0-beta.1"
serde = { version="1", features=["derive"] }
serde_json = "1"
regex = { version = "1", optional = true }
pem = "1.1"
simple_asn1 = "~0.6.2" # Note: there was an API break at 0.5, fixed in 0.5.1
ring = { version = "0.16", features = ["std"] }

[dev-dependencies]
tokio-test = "0.4"